# AOCaml-2023

./: README.md  flake.nix
advent_ocaml/: advent_ocaml.opam  dune-project
advent_ocaml/day_1/: day1.ml  dune  parser.mly
advent_ocaml/day_2/: ast.ml  day2.ml  dune  lexer.mll  parser.mly
advent_ocaml/day_3/: ast.ml  day3.ml  dune  lexer.mll  parser.mly
advent_ocaml/lib/: ast.ml  dune  lexer.mll
advent_ocaml/test/: dune
